[tool.poetry]
name = "brainwallet"
version = "0.1.0"
description = ""
authors = ["姬常峰 <jichf@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ecdsa = "^0.18.0"
blockcypher = "^1.0.93"
pycoin = "^0.92.20230326"
tabulate = "^0.9.0"


[[tool.poetry.source]]
name = "mirrors"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
